# tesi-sdwan

./: .gitignore  LICENSE
code/: ApplicationSenderHelper.cpp  ApplicationSenderHelper.h  CMakeLists.txt  ComputeOptimizationResult.cpp  ComputeOptimizationResult.h  DeviceApplication.cpp  DeviceApplication.h  ISPInterface.cpp  ISPInterface.h  LinearStrategy.cpp  LinearStrategy.h  RandomStrategy.cpp  RandomStrategy.h  ReactiveStrategy.cpp  ReactiveStrategy.h  ReceivedPacketInfo.cpp  ReceivedPacketInfo.h  ReceiverApplication.cpp  ReceiverApplication.h  ReceiverApplicationHelper.cpp  ReceiverApplicationHelper.h  RoundRobinStrategy.cpp  RoundRobinStrategy.h  RunInfo.cpp  RunInfo.h  RunParameters.cpp  RunParameters.h  SDWanApplication.cpp  SDWanApplication.h  SDWanStaticApplication.cpp  SDWanStaticApplication.h  SendPacketInfo.h  SenderApplication.cpp  SenderApplication.h  SinApplication.cpp  SinApplication.h  SinGenerator.cpp  SinGenerator.h  Strategy.cpp  Strategy.h  (+23 more)
code/tests/: hello_test.cc
data/: data_all.csv  data_single.csv
data/aggregate/: .~lock.aggregate_error_rate_static.ods#  .~lock.packetCostVsAmount.ods#  aggregate.ods  aggregate_error_rate_random.ods  aggregate_error_rate_reactive.ods  aggregate_error_rate_round_robin.ods  aggregate_error_rate_static.ods  packetCostVsAmount.ods
data/aggregate/1/: runs_data_0.csv  runs_data_1.csv  runs_data_3.csv
data/aggregate/new/1/: runs_data_0.csv  runs_data_1.csv  runs_data_2.csv  runs_data_3.csv
data/aggregate/new/grouped/0/: runs_data_0_17_37.csv  runs_data_0_18_34.csv  runs_data_0_19_33.csv  runs_data_0_21_28.csv
data/aggregate/new/grouped/1/: runs_data_1_15_27.csv  runs_data_1_16_24.csv  runs_data_1_17_37.csv  runs_data_1_18_34.csv  runs_data_1_19_33.csv  runs_data_1_21_28.csv  runs_data_1_23_22.csv
data/aggregate/new/grouped/2/: runs_data_2_21_28.csv
data/aggregate/new/grouped/3/: runs_data_3_16_24.csv  runs_data_3_18_34.csv  runs_data_3_22_25.csv  runs_data_3_23_22.csv
data/aggregate/old/: runs_data_0.csv
data/aggregate/old/2/: runs_data_0.csv  runs_data_1.csv  runs_data_2.csv  runs_data_3.csv
data/aggregate/old/3/: runs_data_0.csv  runs_data_1.csv  runs_data_3.csv
data/aggregate/old/4/: runs_data_0.csv  runs_data_1.csv  runs_data_3.csv
data/aggregate/old/5/: runs_data_0.csv  runs_data_1.csv  runs_data_3.csv
data/aggregate/old/6/: runs_data_0.csv  runs_data_1.csv  runs_data_3.csv
data/no_noise/: all_data_no_noise.ods  outputNoNoise.txt  outputRandom.csv  outputReactive.csv  outputRoundRobin.csv  sin_application_1_noise_0_shift_12_.csv  sin_application_2_noise_0_shift_8_.csv  sin_application_3_noise_0_shift_4_.csv
data/noise/: all_data_noise.ods  outputNoise.txt  outputRandom.csv  outputReactive.csv  outputRoundRobin.csv  sin_application_1_noise_3_shift_12_.csv  sin_application_2_noise_2_shift_8_.csv  sin_application_3_noise_1_shift_4_.csv
data/shift_no_noise/: all_data_shift_no_noise.ods  outputRandom.csv  outputReactive.csv  outputRoundRobin.csv  outputShiftNoNoise.txt  sin_application_1_noise_0_shift_12_.csv  sin_application_2_noise_0_shift_8_.csv  sin_application_3_noise_0_shift_4_.csv
data/shift_noise/: all_data_shift_noise.ods  outputNoiseAndShift.txt  outputRandom.csv  outputReactive.csv  outputRoundRobin.csv  sin_application_1_noise_3_shift_12_.csv  sin_application_2_noise_2_shift_8_.csv  sin_application_3_noise_1_shift_4_.csv
data/template/: all_data_template.ods
openflowlib/openflow/: test.c  waf.bat
tesi-sdwan/: demo_topology.drawio
tesi-sdwan/context/: abstract.tex  bibliography.bib  conclusion.tex  frontespizio.tex  implementation.tex  intro.tex  introduction.tex  load_balancing.tex  new 11.txt  related_work.tex  sdwan.bbl  sdwan.blg  sdwan.tex  sdwan.toc  test_results.tex
tesi-sdwan/context/brief/: bibliography_brief.bib  brief.bbl  brief.blg  brief.tex
tesi-sdwan/scouting/: README.MD  scouting.tex
